# simple-order-agent

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  PLANNING_IMPLEMENTATION.md  PRD.md  README.md  SPEC.md  claude.md  package-lock.json  package.json
.cursor/commands/: createworktree.md
.github/workflows/: test.yml
backend/: .env.example  .mcp.json  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/a2a/: __init__.py  agent_card.py  models.py  router.py  task_manager.py
backend/agent/: __init__.py  orders_agent.py
backend/api/: __init__.py  config_models.py  config_router.py  config_store.py  conversation_models.py  conversation_router.py
backend/mcp/: __init__.py  client.py
backend/tests/: __init__.py  conftest.py  test_a2a_endpoints.py  test_agent_tools.py  test_config_api.py  test_conversation_api.py  test_mcp_client.py
backend/tests/evals/: dataset.json  run_evals.py  test_evals.py
frontend/: jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/__tests__/: ConversationSidebar.test.tsx  api-config.test.ts  api-conversations.test.ts  settings.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AgentCardDisplay.tsx  Analytics.tsx  Chat.tsx  ConnectorsPopover.tsx  ConversationSidebar.tsx  InputToolbar.tsx  OrdersTable.tsx  PlanDisplay.tsx  Sidebar.tsx  ToolAccordion.tsx
frontend/src/lib/: api.ts  conversation-storage.ts  utils.ts
